--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -36,7 +36,7 @@
               <a class="nav-link txt-white" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link txt-white" href="#contact">Contact us</a>
+              <a class="nav-link txt-white" href="#contact">Contact Us</a>
             </li>
             {% else %}
             {# #}
@@ -64,10 +64,10 @@
             <div class="col text-center">
                 <h4 class="ttu">itsready</h4>
                 <ul class="footer-links">
-                    <li> <a href="#n" class="text-white">privacy</a></li>
-                    <li> <a href="#n" class="text-white">terms and conditions</a></li>
+                    <li> <a href="#n" class="text-white">Privacy</a></li>
+                    <li> <a href="#n" class="text-white">Terms and Conditions</a></li>
                 </ul> 
-                <p class="text-white">&copy; copyright 2023 | all rights reserved </p> 
+                <p class="text-white">&copy; Copyright 2023 | All Rights Reserved </p> 
             </div>
         </div>
     </div>
