--- a/home/templates/dashboard/dashboard.html
+++ b/home/templates/dashboard/dashboard.html
@@ -290,7 +290,7 @@
           <a class="nav-link dropdown-toggle txt-white" href="#" id="navbarDropdown" role="button"
             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fas fa-cog"></i>
-            settings
+            Settings
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a href="#n" class="dropdown-item text-success logout-link">
@@ -440,7 +440,9 @@
             <h2 class="banner-title display-5 text-uppercase text-white text-center">Itsready</h2>
           </div>
           <div class="col-12">
-            <p class="banner-text text-center text-white fz-xsm mxw-700 d-block mx-auto">ITSREADY is a versatile platform designed to enhance your communication experience. With ITSREADY, you can effortlessly send both SMS and voicemails to your saved contacts, all within one streamlined interface. Whether you need to deliver quick text messages or expressive voicemails, ITSREADY ensures that your messages reach your intended recipients without hassle. Say goodbye to juggling multiple platforms – ITSREADY simplifies your communication by bringing SMS and voicemails together for your convenience.</p>
+            <p class="banner-text text-center text-white fz-xsm mxw-700 d-block mx-auto">
+Itsready is a versatile communication platform designed to enhance your customer service experience. You can effortlessly send both SMS and Voicemails to your clients contacts, all in one streamlined interface. Whether you need to deliver quick text messages or expressive voicemails, Itsready ensures that your messages reach their intended recipients with no hassle. Say goodbye to juggling phone numbers and use Itsready to simplify your communications.
+</p>
           </div>
         </div>
       </div>
@@ -467,9 +469,10 @@
               <div class="card-body">
                 <h5 class="card-title text-success">
                   <i class="fas fa-sms"></i>
-                  Send messages to your contacts</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Via sms</h6>
-                <p class="card-text fz-xsm">"ITSREADY" enables you to effortlessly send SMS to your agents by saving their contacts on the designated webpage's contacts tab. Stay connected seamlessly!</p>
+                  Send messages to your customers</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Via SMS</h6>
+                <p class="card-text fz-xsm">Itsready enables you to effortlessly send SMS to a customer at a time or to multiple customers. Stay connected seamlessly!
+</p>
               </div>
             </div>
           </div>
@@ -478,9 +481,11 @@
               <div class="card-body">
                 <h5 class="card-title text-success">
                   <i class="fas fa-microphone"></i>
-                  Send voicemails to your contacts</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Via sms</h6>
-                <p class="card-text fz-xsm">"ITSREADY" makes it effortless to send voicemails to your agents by storing their contacts in the contacts tab. Stay connected by using this platform for smooth communication!</p>
+                  Send voicemails</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Vie automated voice</h6>
+                <p class="card-text fz-xsm">
+Itsready makes it easy to send voicemails to your customers/clients phones to keep them informed.
+</p>
               </div>
             </div>
           </div>
@@ -489,9 +494,11 @@
               <div class="card-body">
                 <h5 class="card-title text-success">
                   <i class="fas fa-sms"></i>
-                  Send messages to agents</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Via SMS</h6>
-                <p class="card-text fz-xsm">"ITSREADY" enables you to effortlessly send SMS to your agents by saving their contacts on the designated webpage's contacts tab. Stay connected seamlessly!</p>
+                  History and Notes</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Notebook</h6>
+                <p class="card-text fz-xsm"
+Take notes and have them handy. Itsready provides you with history of all your sent communications real time.
+!</p>
               </div>
             </div>
           </div>
