--- a/home/templates/dashboard/dashboard_base.html
+++ b/home/templates/dashboard/dashboard_base.html
@@ -163,7 +163,7 @@ searchContact.addEventListener("keyup", (e) => {
     })
 })
 
-alert("https://" + location.host + "/")
+//alert("https://" + location.host + "/")
 </script>
 
 </body>
