--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -70,14 +70,14 @@ application is an intellectual property of Nivee LLC.
                       <div class="card-header bg-success" id="headingOne">
                         <h2 class="mb-0">
                           <button class="btn btn-link text-white font-weight-bold w-100" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            Are customer replies enabled?
+                            Do you have user limitation?
                           </button>
                         </h2>
                       </div>
                   
                       <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accord-parent">
                         <div class="card-body">
-                            Yes, customers can respond directly to service providers messages.
+                            Yes, five users per account.
                         </div>
                       </div>
                     </div>
@@ -93,7 +93,7 @@ application is an intellectual property of Nivee LLC.
                       </div>
                       <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accord-parent">
                         <div class="card-body">
-                            No, you can choose to send a message/call one person at a time or send 
+                            No, you can choose to send a text message or a voicemail to one person at a time or send 
 to many people at once.
                         </div>
                       </div>
@@ -104,13 +104,13 @@ to many people at once.
                       <div class="card-header bg-success" id="headingThree">
                         <h2 class="mb-0">
                           <button class="btn btn-link collapsed text-white font-weight-bold w-100" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            Is this application available globally?
+                            Is this application globally available?
                           </button>
                         </h2>
                       </div>
                       <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accord-parent">
                         <div class="card-body">
-                            Yes, Itsready can be access in any part of the world
+                            Yes, Itsready can be accessed in any part of the world
                         </div>
                       </div>
                     </div>
@@ -126,7 +126,7 @@ to many people at once.
                       </div>
                       <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accord-parent">
                         <div class="card-body">
-                            You can download the application onto your desktop or access it 
+                            You can download the application from google play or apple store. You  can also access it 
 directly through a browser. The website is www.itsreaddy.com
                         </div>
                       </div>
@@ -137,13 +137,13 @@ directly through a browser. The website is www.itsreaddy.com
                       <div class="card-header bg-success" id="headingFive">
                         <h2 class="mb-0">
                           <button class="btn btn-link collapsed text-white font-weight-bold w-100" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                            How do I sign up?
+                            How do I register?
                           </button>
                         </h2>
                       </div>
                       <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accord-parent">
                         <div class="card-body">
-                            Sign up is easy. Download the application or go to the website and click sign up. 
+                            Registration is easy. Download the application or go to the website and click register. 
                             Answer few questions and your account is ready for use immediately.
                         </div>
                       </div>
@@ -177,7 +177,7 @@ directly through a browser. The website is www.itsreaddy.com
                       </div>
                       <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#accord-parent">
                         <div class="card-body">
-                            $1.99/month
+                            $4.99/month
                         </div>
                       </div>
                     </div>
