--- a/home/templates/dashboard/dashboard.html
+++ b/home/templates/dashboard/dashboard.html
@@ -293,17 +293,14 @@
             Settings
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a href="#n" class="dropdown-item text-success logout-link">
-              change password
+            <a href="{% url 'password_change' %}" class="dropdown-item text-success logout-link">
+              Change Password
             </a>
             <a href="#n" class="dropdown-item text-success logout-link">
-              change password
+              Update Profile
             </a>
             <a href="#n" class="dropdown-item text-success logout-link">
-              change password
-            </a>
-            <a href="#n" class="dropdown-item text-success logout-link">
-              change password
+              Update Payment Information
             </a>
           </div>
         </li>
