--- a/home/templates/registration/password_change_form.html
+++ b/home/templates/registration/password_change_form.html
@@ -1,16 +1,8 @@
 {% extends "base.html" %}
 {% load i18n static %}
-{% block title %}{% translate 'Change password' %}{% endblock %}
-{% block branding %}{% translate 'Change password' %}{% endblock %
-{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "admin/css/forms.css" %}">{% endblock %}
-{% block userlinks %}{% url 'django-admindocs-docroot' as docsroot %}{% if docsroot %}<a href="{{ docsroot }}">{% translate 'Documentation' %}</a> / {% endif %} {% translate 'Change password' %} / <a href="{% url 'admin:logout' %}">{% translate 'Log out' %}</a>{% endblock %}
-{% block breadcrumbs %}
-<div class="breadcrumbs">
-<a href="{% url 'admin:index' %}">{% translate 'Home' %}</a>
-&rsaquo; {% translate 'Password change' %}
-</div>
+{% block title %}
+Change password
 {% endblock %}
-
 {% block content %}<div id="content-main">
 
 <form action="{% url 'password_change' %}" method="post">
