--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -67,7 +67,7 @@
                     <li> <a href="#n" class="text-white">Privacy</a></li>
                     <li> <a href="#n" class="text-white">Terms and Conditions</a></li>
                 </ul> 
-                <p class="text-white">&copy; Copyright 2023 | All Rights Reserved </p> 
+                <p class="text-white">&copy; Copyright 2023 | All rights reserved </p> 
             </div>
         </div>
     </div>
