--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -32,7 +32,7 @@ application is an intellectual property of Nivee LLC.
         <div class="row">
             <div class="col-md-6" data-aos="fade-left">
                 <h2 class="display-4 ttc" style="font-size: 2.5rem;">send us a message</h2>
-                <p>Please email us via adm@niveel.com or send us a message here and we will reply via email within 24 hrs.</p>
+                <p>Please email us via support@itsreaddy.com or send us a message here and we will reply via email within 24 hrs.</p>
             </div>
             <div class="col-md-6" data-aos="fade-right">
                 <form class="p-2">
