--- a/home/templates/registration/password_reset_email.html
+++ b/home/templates/registration/password_reset_email.html
@@ -8,7 +8,7 @@
 {% endblock %}
 {% translate 'Your username, in case you’ve forgotten:' %} {{ user.get_username }}
 
-{% translate "Thanks for using our site!" %}
+{% translate "Thanks for using Itsready!" %}
 
 {% blocktranslate %}The {{ site_name }} team{% endblocktranslate %}
 
