--- a/home/templates/registration/password_change_done.html
+++ b/home/templates/registration/password_change_done.html
@@ -3,5 +3,17 @@
 {% block title %}{% translate 'Password changed' %}{% endblock %}
 
 {% block content %}
-<p>{% translate 'Your password was changed.' %}</p>
+<style>
+    main {
+        min-height: 80vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+</style>
+<main class="container">
+    <p class="text-success">{% translate 'Your password was changed.' %}</p>
+    <a href="{% url 'dashboard' %}">Return to dashboard.</a>
+</main>
 {% endblock %}
