--- a/home/templates/registration/password_change_form.html
+++ b/home/templates/registration/password_change_form.html
@@ -3,50 +3,96 @@
 {% block title %}
 Change password
 {% endblock %}
-{% block content %}<div id="content-main">
+{% block content %}
+<style>
+    #content-main {
+        min-height: 80vh;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        justify-content: center;
+        align-items: center;
 
-<form action="{% url 'password_change' %}" method="post">
-{% csrf_token %}
-<div>
-{% if form.errors %}
-    <p class="errornote">
-    {% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}
-    </p>
-{% endif %}
+        & form {
+            width: 100%;
+            max-width: 40rem;
+            padding: 1.5rem!important;
 
+            & input:not([type="submit"]) {
+                display: block;
+                width: 100%;
+                height: calc(1.5em + 0.75rem + 2px);
+                padding: 0.375rem 0.75rem;
+                font-size: 1rem;
+                font-weight: 400;
+                line-height: 1.5;
+                color: #495057;
+                background-color: #fff;
+                background-clip: padding-box;
+                border: 1px solid #ced4da;
+                border-radius: 0.25rem;
+                transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 
-<p>{% translate 'Please enter your old password, for security’s sake, and then enter your new password twice so we can verify you typed it in correctly.' %}</p>
+                &:focus {
+                    color: #495057;
+                    background-color: #fff;
+                    border-color: #80bdff;
+                    outline: 0;
+                    box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);
+                }
+            }
+        } 
+    }
+    .help {
+        color: rgb(198, 20, 20);
+        font-size: 0.7rem!important;
+    }
+</style>
+<main id="content-main" class="container py-4">
 
-<fieldset class="module aligned wide">
-
-<div class="form-row">
-    {{ form.old_password.errors }}
-    {{ form.old_password.label_tag }} {{ form.old_password }}
-</div>
-
-<div class="form-row">
-    {{ form.new_password1.errors }}
-    {{ form.new_password1.label_tag }} {{ form.new_password1 }}
-    {% if form.new_password1.help_text %}
-    <div class="help">{{ form.new_password1.help_text|safe }}</div>
+    <form action="{% url 'password_change' %}" method="post" class="shadow my-5 p-2">
+    {% csrf_token %}
+    <div>
+    {% if form.errors %}
+        <p class="errornote">
+        {% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}
+        </p>
     {% endif %}
-</div>
 
-<div class="form-row">
-{{ form.new_password2.errors }}
-    {{ form.new_password2.label_tag }} {{ form.new_password2 }}
-    {% if form.new_password2.help_text %}
-    <div class="help">{{ form.new_password2.help_text|safe }}</div>
-    {% endif %}
-</div>
 
-</fieldset>
+    <p style="font-size: 1rem;">{% translate 'Please enter your old password, for security’s sake, and then enter your new password twice so we can verify you typed it in correctly.' %}</p>
 
-<div class="submit-row">
-    <input type="submit" value="{% translate 'Change my password' %}" class="default">
-</div>
+    <fieldset class="module aligned wide">
 
-</div>
-</form></div>
+        <div class="form-row">
+            {{ form.old_password.errors }}
+            {{ form.old_password.label_tag }} {{ form.old_password }}
+        </div>
+
+        <div class="form-row">
+            {{ form.new_password1.errors }}
+            {{ form.new_password1.label_tag }} {{ form.new_password1 }}
+            {% if form.new_password1.help_text %}
+            <div class="help">{{ form.new_password1.help_text|safe }}</div>
+            {% endif %}
+        </div>
+
+        <div class="form-row">
+        {{ form.new_password2.errors }}
+            {{ form.new_password2.label_tag }} {{ form.new_password2 }}
+            {% if form.new_password2.help_text %}
+            <div class="help">{{ form.new_password2.help_text|safe }}</div>
+            {% endif %}
+        </div>
+
+    </fieldset>
+
+    <div class="submit-row">
+        <input type="submit"  value="{% translate 'Change my password' %}" class="default btn btn-success mt-2">
+    </div>
+
+    </div>
+    </form>
+</main>
 
 {% endblock %}
