--- a/home/templates/registration/password_reset_complete.html
+++ b/home/templates/registration/password_reset_complete.html
@@ -11,8 +11,12 @@
 
 {% block content %}
 
-<p>{% translate "Your password has been set.  You may go ahead and log in now." %}</p>
+<main class="container mh80 flex-column justify-content-center align-items-center d-flex" style="padding-top: 56px;">
+    <p>{% translate "Your password has been set.  You may go ahead and log in now." %}</p>
+    
+    <p><a href="{{ login_url }}" class="btn btn-success">{% translate 'Log in' %}</a></p>
 
-<p><a href="{{ login_url }}">{% translate 'Log in' %}</a></p>
+</main>
+
 
 {% endblock %}
