--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -64,8 +64,12 @@
             <div class="col text-center">
                 <h4 class="ttu">itsready</h4>
                 <ul class="footer-links">
-                    <li> <a href="#n" class="text-white">Privacy</a></li>
-                    <li> <a href="#n" class="text-white">Terms and Conditions</a></li>
+                    <li>
+                      <a href="{% url 'privacy' %}" class="text-white">Privacy</a>
+                    </li>
+                    <li> 
+                    <a href="{% url 'terms' %}"  class="text-white">Terms and Conditions</a>
+                  </li>
                 </ul> 
                 <p class="text-white">&copy; Copyright 2023 | All rights reserved </p> 
             </div>
