--- a/home/templates/registration/password_reset_confirm.html
+++ b/home/templates/registration/password_reset_confirm.html
@@ -2,7 +2,7 @@
 {% load i18n static %}
 {% block title %}{% translate 'Password reset confirmation' %}{% endblock %}
 {% block branding %}{% translate 'Password reset confirmation' %}{% endblock %}
-{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "admin/css/forms.css" %}">{% endblock %}
+{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static 'admin/css/forms.css' %}">{% endblock %}
 {% block breadcrumbs %}
 <div class="breadcrumbs">
 <a href="{% url 'admin:index' %}">{% translate 'Home' %}</a>
@@ -11,28 +11,71 @@
 {% endblock %}
 
 {% block content %}
+<style>
+    #reset-confirm {
+        min-height: 80vh;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        justify-content: center;
+        align-items: center;
 
+        & form {
+            width: 100%;
+            max-width: 40rem;
+            padding: 1.5rem!important;
+
+            & input:not([type="submit"]) {
+                display: block;
+                width: 100%;
+                height: calc(1.5em + 0.75rem + 2px);
+                padding: 0.375rem 0.75rem;
+                font-size: 1rem;
+                font-weight: 400;
+                line-height: 1.5;
+                color: #495057;
+                background-color: #fff;
+                background-clip: padding-box;
+                border: 1px solid #ced4da;
+                border-radius: 0.25rem;
+                transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+
+                &:focus {
+                    color: #495057;
+                    background-color: #fff;
+                    border-color: #80bdff;
+                    outline: 0;
+                    box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);
+                }
+            }
+        } 
+    }
+    .help {
+        color: rgb(198, 20, 20);
+        font-size: 0.7rem!important;
+    }
+</style>
 {% if validlink %}
+<main id="reset-confirm" class="container py-4">
+    <p>{% translate "Please enter your new password twice so we can verify you typed it in correctly." %}</p>
 
-<p>{% translate "Please enter your new password twice so we can verify you typed it in correctly." %}</p>
-
-<form method="post">{% csrf_token %}
-<fieldset class="module aligned">
-    <input class="hidden" autocomplete="username" value="{{ form.user.get_username }}">
-    <div class="form-row field-password1">
-        {{ form.new_password1.errors }}
-        <label for="id_new_password1">{% translate 'New password:' %}</label>
-        {{ form.new_password1 }}
-    </div>
-    <div class="form-row field-password2">
-        {{ form.new_password2.errors }}
-        <label for="id_new_password2">{% translate 'Confirm password:' %}</label>
-        {{ form.new_password2 }}
-    </div>
-    <input type="submit" value="{% translate 'Change my password' %}">
-</fieldset>
-</form>
-
+    <form method="post">{% csrf_token %}
+    <fieldset class="module aligned">
+        <input class="hidden" autocomplete="username" value="{{ form.user.get_username }}">
+        <div class="form-row field-password1">
+            {{ form.new_password1.errors }}
+            <label for="id_new_password1">{% translate 'New password:' %}</label>
+            {{ form.new_password1 }}
+        </div>
+        <div class="form-row field-password2">
+            {{ form.new_password2.errors }}
+            <label for="id_new_password2">{% translate 'Confirm password:' %}</label>
+            {{ form.new_password2 }}
+        </div>
+        <input type="submit" value="{% translate 'Change my password' %}">
+    </fieldset>
+    </form>
+</main>
 {% else %}
 
 <p>{% translate "The password reset link was invalid, possibly because it has already been used.  Please request a new password reset." %}</p>
