--- a/home/templates/registration/password_reset_done.html
+++ b/home/templates/registration/password_reset_done.html
@@ -11,8 +11,9 @@
 
 {% block content %}
 
-<p>{% translate 'We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.' %}</p>
+<main class="container mh80 flex-column justify-content-center align-items-center d-flex" style="padding-top: 56px;">
+    <p>{% translate 'We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.' %}</p>
 
-<p>{% translate 'If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.' %}</p>
-
+    <p>{% translate 'If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.' %}</p>
+</main>
 {% endblock %}
