--- a/home/templates/registration/password_reset_form.html
+++ b/home/templates/registration/password_reset_form.html
@@ -5,8 +5,7 @@
 {% translate 'Password reset' %}
 {% endblock %}
 
-
-{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "admin/css/forms.css" %}">{% endblock %}
+{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static 'admin/css/forms.css' %}">{% endblock %}
 {% block breadcrumbs %}
 <div class="breadcrumbs">
 <a href="{% url 'admin:index' %}">{% translate 'Home' %}</a>
@@ -15,18 +14,62 @@
 {% endblock %}
 
 {% block content %}
+<style>
+    #reset-main {
+        min-height: 80vh;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        justify-content: center;
+        align-items: center;
 
-<p>{% translate 'Forgotten your password? Enter your email address below, and we’ll email instructions for setting a new one.' %}</p>
+        & form {
+            width: 100%;
+            max-width: 40rem;
+            padding: 1.5rem!important;
 
-<form action="{% url 'password_reset' %}" method="post">{% csrf_token %}
-<fieldset class="module aligned">
-    <div class="form-row field-email">
-        {{ form.email.errors }}
-        <label for="id_email">{% translate 'Email address:' %}</label>
-        {{ form.email }}
-    </div>
-    <input type="submit" value="{% translate 'Reset my password' %}">
-</fieldset>
-</form>
+            & input:not([type="submit"]) {
+                display: block;
+                width: 100%;
+                height: calc(1.5em + 0.75rem + 2px);
+                padding: 0.375rem 0.75rem;
+                font-size: 1rem;
+                font-weight: 400;
+                line-height: 1.5;
+                color: #495057;
+                background-color: #fff;
+                background-clip: padding-box;
+                border: 1px solid #ced4da;
+                border-radius: 0.25rem;
+                transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 
+                &:focus {
+                    color: #495057;
+                    background-color: #fff;
+                    border-color: #80bdff;
+                    outline: 0;
+                    box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);
+                }
+            }
+        } 
+    }
+    .help {
+        color: rgb(198, 20, 20);
+        font-size: 0.7rem!important;
+    }
+</style>
+<main id="reset-main" class="container py-4">
+    <p>{% translate 'Forgotten your password? Enter your email address below, and we’ll email instructions for setting a new one.' %}</p>
+
+    <form action="{% url 'password_reset' %}" method="post">{% csrf_token %}
+    <fieldset class="module aligned">
+        <div class="form-row field-email">
+            {{ form.email.errors }}
+            <label for="id_email">{% translate 'Email address:' %}</label>
+            {{ form.email }}
+        </div>
+        <input type="submit" class="btn btn-success mt-2" value="{% translate 'Reset my password' %}">
+    </fieldset>
+    </form>
+</main>
 {% endblock %}
