--- a/home/templates/dashboard/dashboard.html
+++ b/home/templates/dashboard/dashboard.html
@@ -225,7 +225,8 @@
       }
       .navbar-link {
         padding: 9px 5px;
-        font-size: 0.8rem!important;
+        font-size: 0.82rem!important;
+        font-weight: bold!important;
       }
       .scroll-top-btn {
         bottom: 8rem;
