--- a/home/templates/home/terms.html
+++ b/home/templates/home/terms.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
+{% block title %}
+Our Terms and Conditions
+{% endblock %}
 {% block content %}
 <style>
     main {
