--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -43,7 +43,7 @@
             {% endif %}
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle txt-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Login
+                Register
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="{% url 'login' %}">Login</a>
@@ -71,7 +71,7 @@
                     <a href="{% url 'terms' %}"  class="text-white">Terms and Conditions</a>
                   </li>
                 </ul> 
-                <p class="text-white">&copy; Copyright 2023 | All rights reserved </p> 
+                <p class="text-white">&copy; Copyright 2023 | All rights reserved Powered by NiveeLLC</p> 
             </div>
         </div>
     </div>
