--- a/home/templates/home/privacy.html
+++ b/home/templates/home/privacy.html
@@ -117,7 +117,7 @@ Privacy
     <ul class="block-list">
         <li>
             <p>If you have any questions, concerns, or requests regarding this Privacy Policy or our privacy practices,
-                please contact us at adm@niveel.com.                
+                please contact us at support@itsreaddy.com.                
                 </p>
         </li>
     </ul>
