--- a/home/templates/home/terms.html
+++ b/home/templates/home/terms.html
@@ -130,7 +130,7 @@ Our Terms and Conditions
     <h2 class="block-title text-capitalize text-success">10. Contact Us
     </h2>
     <p>If you have any questions, concerns, or requests regarding these Terms, please contact us at
-        adm@niveel.com.
+        support@itsreaddy.com.
         </p>
         <h5>By using the Itsready Mobile App, you acknowledge that you have read and understood these Terms and
             agree to be bound by them</h5>
