--- a/home/templates/registration/login.html
+++ b/home/templates/registration/login.html
@@ -32,7 +32,7 @@ Login
         <input type="submit" class="btn btn-light text-success font-weight-bold fz-sm d-block w-50" value="Login" />
     </form>
     <div class="info-box">
-        <p class="helptext d-flex gap-2">Forget your password? <a href="{% url 'password_reset' %}">Reset password</a></p>
+        <p class="helptext d-flex gap-2">Forgot password?<a href="{% url 'password_reset' %}">Reset password</a></p>
     </div>
 
 
