--- a/home/templates/dashboard/dashboard.html
+++ b/home/templates/dashboard/dashboard.html
@@ -277,7 +277,7 @@
         <img src="{% static 'img/logo.jpg' %}" alt="logo" width="80">
       </figure>
       <div class="info-content">
-        <h2 class="name">ITSREADY</h2>
+        <h2 class="name">Itsreaddy</h2>
         <p class="title">dashboard</p>
       </div>
 
@@ -436,20 +436,20 @@
         <!-- end -->
       </section>
       <!-- end of stats section -->
-      <!-- itsready banner box -->
+      <!-- Itsreaddy banner box -->
       <div class="home-banner-box container bg-green-gradient my-3 p-2 rounded shadow ">
         <div class="row justify-content-center flex-column align-items-center">
           <div class="col-12 col-md-6">
-            <h2 class="banner-title display-5 text-uppercase text-white text-center">Itsready</h2>
+            <h2 class="banner-title display-5 text-uppercase text-white text-center">Itsreaddy</h2>
           </div>
           <div class="col-12">
             <p class="banner-text text-center text-white fz-xsm mxw-700 d-block mx-auto">
-Itsready is a versatile communication platform designed to enhance your customer service experience. You can effortlessly send both SMS and Voicemails to your clients contacts, all in one streamlined interface. Whether you need to deliver quick text messages or expressive voicemails, Itsready ensures that your messages reach their intended recipients with no hassle. Say goodbye to juggling phone numbers and use Itsready to simplify your communications.
+Itsreaddy is a versatile communication platform designed to enhance your customer service experience. You can effortlessly send both SMS and Voicemails to your clients contacts, all in one streamlined interface. Whether you need to deliver quick text messages or expressive voicemails, Itsreaddy ensures that your messages reach their intended recipients with no hassle. Say goodbye to juggling phone numbers and use Itsreaddy to simplify your communications.
 </p>
           </div>
         </div>
       </div>
-      <!-- end of itsready banner box -->
+      <!-- end of Itsreaddy banner box -->
       <!-- details section -->
       <style>
         .card {
@@ -474,7 +474,7 @@ Itsready is a versatile communication platform designed to enhance your customer
                   <i class="fas fa-sms"></i>
                   Send messages to your customers</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Via SMS</h6>
-                <p class="card-text fz-xsm">Itsready enables you to effortlessly send SMS to a customer at a time or to multiple customers. Stay connected seamlessly!
+                <p class="card-text fz-xsm">Itsreaddy enables you to effortlessly send SMS to a customer at a time or to multiple customers. Stay connected seamlessly!
 </p>
               </div>
             </div>
@@ -485,9 +485,9 @@ Itsready is a versatile communication platform designed to enhance your customer
                 <h5 class="card-title text-success">
                   <i class="fas fa-microphone"></i>
                   Send voicemails</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Vie automated voice</h6>
+                <h6 class="card-subtitle mb-2 text-muted">Via Automated Voice</h6>
                 <p class="card-text fz-xsm">
-Itsready makes it easy to send voicemails to your customers/clients phones to keep them informed.
+Itsreaddy makes it easy to send voicemails to your customers/clients phones to keep them informed.
 </p>
               </div>
             </div>
@@ -500,7 +500,8 @@ Itsready makes it easy to send voicemails to your customers/clients phones to ke
                   History and Notes</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Notebook</h6>
                 <p class="card-text fz-xsm">
-Take notes and have them handy. Itsready provides you with history of all your sent communications real time.
+Take notes and have them handy. 
+ provides you with history of all your sent communications real time.
 !</p>
               </div>
             </div>
