--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -5,7 +5,7 @@
 <div class="header">
     <div class="overlay w100 h100 d-flex justify-content-center align-items-center">
         <div class="content-box txt-white text-center mxw-700">
-            <h1 class="mb-5" data-aos="fade-up">Providing messaging and voice services to businesses in the United States and beyond.</h1>
+            <h1 class="mb-5" data-aos="fade-up">Providing messaging and voicemail services to businesses in the United States and beyond.</h1>
         </div>
     </div>
 </div>
@@ -16,7 +16,7 @@
       <h1 class="display-6 text-center">ABOUT US</h1>
         <div class="row">
             <div class="col fz-sm" data-aos="fade-up" data-aos-delay="200">
-                Itsready is a mobile responsive application enabling instant text messaging and voice calling. Service 
+                Itsreaddy is a mobile responsive application enabling instant text messaging and voice mailing. Service 
 providers rely on our platform to communicate with their customers at the click of a button. This 
 application is an intellectual property of Nivee LLC.
 
@@ -35,18 +35,19 @@ application is an intellectual property of Nivee LLC.
                 <p>Please email us via support@itsreaddy.com or send us a message here and we will reply via email within 24 hrs.</p>
             </div>
             <div class="col-md-6" data-aos="fade-right">
-                <form class="p-2">
+                <form class="p-2" action="/" method="POST">
                     <div class="row p-2">
                       <div class="col-sm-6 mb-2 mb-sm-0">
-                        <input type="text" class="form-control" placeholder="Your name" required>
+                        {% csrf_token %}
+                        <input type="text" name="name" class="form-control" placeholder="Your name" required>
                       </div>
                       <div class="col-sm-6">
-                        <input type="email" class="form-control" placeholder="Your email" required>
+                        <input type="email" name="email" class="form-control" placeholder="Your email" required>
                       </div>
                     </div>
                     <div class="row p-2">
                         <div class="col">
-                            <textarea class="w-100 h-20rm form-control" style="height: 10rem;" required></textarea>
+                            <textarea name="message" class="w-100 h-20rm form-control" style="height: 10rem;" required></textarea>
                         </div>
                     </div>
                     <div class="col p-2">
@@ -110,7 +111,7 @@ to many people at once.
                       </div>
                       <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accord-parent">
                         <div class="card-body">
-                            Yes, Itsready can be accessed in any part of the world
+                            Yes, Itsreaddy can be accessed in any part of the world
                         </div>
                       </div>
                     </div>
