--- a/home/templates/registration/logged_out.html
+++ b/home/templates/registration/logged_out.html
@@ -21,7 +21,7 @@ Logged out
     }
 </style>
 <main class="container" id="logout-container">
-    <p>{% translate "Thanks for spending some quality time with the Web site today." %}</p>
+    <p>{% translate "Thank you for using Itsreaddy!" %}</p>
     
     <a href="{% url 'login' %}" class="btn btn-success">{% translate 'Log in again' %}</a>
     <a href="{% url 'home' %}" class="btn btn-primary">Home</a>
