--- a/home/templates/dashboard/dashboard.html
+++ b/home/templates/dashboard/dashboard.html
@@ -500,9 +500,9 @@ Itsreaddy makes it easy to send voicemails to your customers/clients phones to k
                   History and Notes</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Notebook</h6>
                 <p class="card-text fz-xsm">
-Take notes and have them handy. 
- provides you with history of all your sent communications real time.
-!</p>
+Take notes and have them handy; 
+ provides you with history of all your sent communications real time!
+</p>
               </div>
             </div>
           </div>
