--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Providing messaging and voice services to businesses in the United States and beyond. Itsready is a mobile responsive application enabling instant text messaging and voice calling. Service 
+    <meta name="description" content="Providing messaging and voice services to businesses in the United States and beyond. Itsreaddy is a mobile responsive application enabling instant text messaging and voice calling. Service 
     providers rely on our platform to communicate with their customers at the click of a button. This 
     application is an intellectual property of Nivee LLC.">
     <title>{% block title %} {% endblock %}</title>
@@ -22,7 +22,7 @@
 
     <!-- nav -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-success fixed-top shadow">
-        <a class="navbar-brand" href="{% url 'home' %}">ITSREADY</a>
+        <a class="navbar-brand" href="{% url 'home' %}">ITSREADDY</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -62,7 +62,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col text-center">
-                <h4 class="ttu">itsready</h4>
+                <h4 class="ttu">itsreaddy</h4>
                 <ul class="footer-links">
                     <li>
                       <a href="{% url 'privacy' %}"   class="text-white">Privacy</a>
@@ -71,7 +71,7 @@
                     <a href="{% url 'terms' %}"  class="text-white">Terms and Conditions</a>
                   </li>
                 </ul> 
-                <p class="text-white">&copy; Copyright 2023 | All rights reserved Powered by NiveeLLC</p> 
+                <p class="text-white">&copy; Copyright 2023 | All rights reserved | Powered by Nivee LLC</p> 
             </div>
         </div>
     </div>
