--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -22,7 +22,11 @@
 
     <!-- nav -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-success fixed-top shadow">
-        <a class="navbar-brand" href="{% url 'home' %}">ITSREADDY</a>
+        <a class="navbar-brand" href="{% url 'home' %}" style="display: flex; align-items: center; gap: .5rem"> 
+          <figure class="logo-img">
+            <img src="{% static 'img/fav.png' %}" alt="logo" class="img-fluid">
+          </figure>
+          ITSREADDY</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
