--- a/home/templates/home/terms.html
+++ b/home/templates/home/terms.html
@@ -17,7 +17,7 @@ Our Terms and Conditions
 </style>
 <main class="container py-5">
     <h1 class="text-center my-4">terms and conditions</h1>
-    <h5>Please read these Terms and Conditions ("Terms") carefully before using the Itsready Mobile App
+    <h5>Please read these Terms and Conditions ("Terms") carefully before using the Itsreaddy Mobile App
         provided by Nivee LLC ("we," "us," or "our"). By accessing or using the App, you agree to be bound by
         these Terms. If you do not agree with any part of these Terms, do not use the App.
         </h5>
@@ -132,7 +132,7 @@ Our Terms and Conditions
     <p>If you have any questions, concerns, or requests regarding these Terms, please contact us at
         support@itsreaddy.com.
         </p>
-        <h5>By using the Itsready Mobile App, you acknowledge that you have read and understood these Terms and
+        <h5>By using the Itsreaddy Mobile App, you acknowledge that you have read and understood these Terms and
             agree to be bound by them</h5>
 </main>
 {% endblock %}
