--- a/home/templates/home/privacy.html
+++ b/home/templates/home/privacy.html
@@ -21,10 +21,9 @@ Privacy
 <main class="container py-5">
     <h1 class="text-center my-4">privacy policy</h1>
 
-    <h2 class="block-title text-capitalize text-success">Lorem ipsum dolor sit amet.</h2>
-    <h5>Welcome to the Itsready Mobile App. This Privacy Policy outlines how Nivee LLC ("we," "us," or "our")
+    <h5>Welcome to the Itsreaddy Mobile App. This Privacy Policy outlines how Nivee LLC ("we," "us," or "our")
         collects, uses, discloses, and protects your personal information when you use our mobile application.
-        By accessing or using the Itsready Mobile App, you agree to the terms and conditions of this Privacy
+        By accessing or using the Itsreaddy Mobile App, you agree to the terms and conditions of this Privacy
         Policy.</h5>
         <h2 class="block-title text-capitalize text-success">1. Information We Collect</h2>
     <ul class="block-list">
@@ -40,9 +39,6 @@ Privacy
         <li>
             <p> <span class="text-primary">1.3. Log Data:</span>We may automatically collect certain information when you use our App, including your device's
                 Internet Protocol (IP) address, device type, operating system version, and unique device identifiers.</p>
-        </li>
-        <li>
-            <p> <span class="text-primary">Lorem ipsum dolor sit amet consectetur.</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe aperiam explicabo voluptatibus voluptas quasi nisi, rerum quam non amet sed! Ut similique tempora minus ipsum odit sed vitae perferendis illo.</p>
         </li>
     </ul>
     <h2 class="block-title text-capitalize text-success">2. Use of Information</h2>
@@ -97,7 +93,7 @@ Privacy
     <h2 class="block-title text-capitalize text-success">6. Children's Privacy    </h2>
     <ul class="block-list">
         <li>
-            <p>The Itsready Mobile App is not intended for use by individuals under the age of 16. We do not knowingly
+            <p>The Itsreaddy Mobile App is not intended for use by individuals under the age of 16. We do not knowingly
                 collect personal information from children under 16. If we become aware that we have collected
                 personal information from a child under 16, we will take steps to delete the information as soon as
                 possible.
@@ -121,7 +117,7 @@ Privacy
                 </p>
         </li>
     </ul>
-    <h5>By using the Itsready Mobile App, you acknowledge that you have read and understood this Privacy
+    <h5>By using the Itsreaddy Mobile App, you acknowledge that you have read and understood this Privacy
         Policy and consent to the collection, use, and disclosure of your personal information as described
         herein.</h5>
 </main>
