--- a/home/templates/dashboard/dashboard.html
+++ b/home/templates/dashboard/dashboard.html
@@ -318,6 +318,12 @@
             <a href="#n" class="dropdown-item text-success logout-link">
               Update Profile
             </a>
+
+            <a href="#n" class="dropdown-item text-success logout-link">
+              Delete Account
+            </a>
+
+
             <a href="#n" class="dropdown-item text-success logout-link">
               Update Payment Information
             </a>
